--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,6 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
@@ -15,7 +14,7 @@ jobs:
       - uses: crypt0kitty/metrics@latest
         with:
           # Current configuration doesn't require a GitHub token
-          token: NOT_NEEDED
+          token: METRICS
 
           # Options
           user: crypt0kitty
