--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,4 +25,4 @@ jobs:
           plugin_screenshot_background: yes
           plugin_screenshot_selector: body
           plugin_screenshot_title: Screenshot
-          plugin_screenshot_url: https://sandyvasquez.dev/index.html
+          plugin_screenshot_url: https://sandyvasquez.dev/
