--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,29 +1,14 @@
 # Visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
-name: Portfolio
-on:
-  # Schedule updates (each hour)
-  # Lines below let you run workflow manually and on each commit
-  workflow_dispatch:
-  push: {branches: ["master", "main"]}
-jobs:
-  github-metrics:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: crypt0kitty/portfolio@main
-     
-        with:
-          # Current configuration doesn't require a GitHub token
-          token: NOT_NEEDED
+name: test
+uses: crypt0kitty/metrics@latest
+uses: crypt0kitty/metrics@main
+with:
+  filename: metrics.plugin.screenshot.svg
+  token: NOT_NEEDED
+  base: ""
+  plugin_screenshot: yes
+  plugin_screenshot_title: My Portfolio
+  plugin_screenshot_url: https://sandyvasquez.dev/
+  plugin_screenshot_selector: ""
 
-          # Options
-          user: crypt0kitty
-          template: classic
-          base: ""
-          config_timezone: America/Los_Angeles
-          plugin_screenshot: yes
-          plugin_screenshot_background: yes
-          plugin_screenshot_selector: body
-          plugin_screenshot_title: Screenshot
-          plugin_screenshot_url: https://sandyvasquez.dev/
+
