--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,6 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
@@ -29,7 +28,7 @@ jobs:
           # Options
           user: crypt0kitty
           template: terminal
-          base: repositories
+          base: ""
           config_timezone: America/Los_Angeles
           plugin_screenshot: yes
           plugin_screenshot_background: yes
